--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,30 +2,41 @@
     grid: border-box;
 }
 
-
-
 #home {
     background-image: url("media/Color\ \(14\ of\ 20\).jpg");
+    background-size: cover;
     width:100%
-    margin: 0px;
-    padding: 0px;
+    /* margin: 0px;
+    padding: 0px; */
 }
 
 #bio_background {
-    background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
+    /* background-image: url("Media/Color\ \(15\ of\ 20\).jpg"); */
+    background-
+    background-size: cover;
     width: 100%;
     margin: 0px;
     padding: 0px;
+    
 }
 
+#bio_pic_background {
+    display: block;
+    width: 100%;
+    padding: 0rem;
+    margin: 0rem;
+    z-index: 0;
+    
+}
 
 #bio_pic {
     display: block;
     float: left;
     width: 10em;
+    z-index: 1;
 
 }
 
 .section_information {
-    display: 
+    /* display: ; */
 }
