Updated HTML to be cleaned from testing with elements. Managed to eliminate the gaps on the sides of the background images through changing the margin of the body element to 0 rem. Still need to eliminate the gap between the background images.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,32 @@
-. {
+/* . {
     grid: border-box;
+} */
+
+body {
+    margin: 0rem;
+    padding: 0rem;
+}
+
+section { 
+    margin: 0rem;
+    padding: 0rem;
+}
+
+p {
+    margin: 1 rem;
 }
 
 #home {
     background-image: url("media/Color\ \(14\ of\ 20\).jpg");
     background-size: cover;
-    display: block;
+    display: grid;
     width:100%;
     /* margin: 0px; 
     padding: 0px; */
 }
 
 #bio_background {
-    /* background-image: url("Media/Color\ \(15\ of\ 20\).jpg"); */
+    background-image: url("Media/Color\ \(15\ of\ 20\).jpg");
     background-size: cover;
     width: 100%;
     margin: 0px;
@@ -21,7 +35,7 @@
 }
 
 #bio_pic_background {
-    display: block;
+    display: grid;
     width: 100%;
     padding: 0rem;
     margin: 0rem;
@@ -30,15 +44,11 @@
 }
 
 #bio_pic {
-    display: block;
+    display: grid;
     float: left;
     width: 10em;
     z-index: 1;
 
-}
-
-.section_information {
-    /* display: ; */
 }
 
 .nav_linksf {
