--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ h1 {
 
 h2 {
     color: white;
-    font-size: 1.25em;
+    font-size: 1.5em;
     text-align: right;
     margin-right: 1em;
 }
@@ -26,6 +26,7 @@ h3 {
     text-align: center;
     font-size: 2.5em;
     margin: 0em;
+    padding: .5em;
 }
 
 ul {
@@ -56,6 +57,18 @@ p {
     margin: 1em;
 }
 
+.contact_button {
+    border: solid .2em;
+    border-color: white;
+    color: white;
+    padding: .5em;
+    text-decoration: none;
+}
+
+.contact_button_wrapper {
+    text-align: center;
+}
+
 #footer {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -76,12 +89,12 @@ p {
 /* ----- Home Section of Page ----- */
 #home_section {
     background-image: url("media/Color\ \(14\ of\ 20\).jpg");
-    background-color: rgb(196, 196, 196);
+    background-color: rgb(175, 175, 175);
     background-blend-mode: multiply;
-    background-position-x: -160px;
+    background-position-x: -130px;
     background-size: cover;
     margin-bottom: -1.25rem;
-    padding-bottom: 20em;
+    padding-bottom: 10em;
     
 }
 
@@ -92,7 +105,7 @@ p {
     background-blend-mode: overlay;
     background-size: cover;
     margin-bottom: -1.25rem;
-    padding-bottom: 10em;
+    padding-bottom: 5em;
 }
 
 #bio_pic {
@@ -111,10 +124,15 @@ p {
 /* ----- Teaching Section of Page ----- */
 #teaching_section {
     background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
+    background-color: rgb(80, 80, 80);
+    background-blend-mode: overlay;
     background-size: cover;
     margin-bottom: -1.25rem;
     padding-bottom: 20em;
-    
+}
+
+.teaching_information {
+    color: white;
 }
 
 /* ----- Contact Section of Page ----- */
@@ -123,6 +141,10 @@ p {
     background-size: cover;
     margin-bottom: -1.25rem;
     padding-bottom: 20em;
+}
+
+.contact_information {
+    color: white;
 }
 
 /* ----- Footer ----- */
