--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,156 +1,164 @@
-/* @media only screen and (max-width: 768px) */
-/* ----- Universal Styles ----- */
+@media only screen and (max-width: 400px) {
+    /* ----- Universal Styles ----- */
 
-body {
-    margin: 0rem;
-    padding: 0rem;
-}
+    body {
+        margin: 0rem;
+        padding: 0rem;
+    }
 
-h1 {
-    color: white;
-    font-size: 1.75em;
-    text-align: right;
-    padding-top: 2em;
-    margin-right: 1em;
-}
+    h1 {
+        color: white;
+        font-size: 1.75em;
+        text-align: right;
+        padding-top: 2em;
+        margin-right: 1em;
+    }
 
-h2 {
-    color: white;
-    font-size: 1.5em;
-    text-align: right;
-    margin-right: 1em;
-}
+    h2 {
+        color: white;
+        font-size: 1.5em;
+        text-align: right;
+        margin-right: 1em;
+    }
 
-h3 {
-    color: white;
-    text-align: center;
-    font-size: 2.5em;
-    margin: 0em;
-    padding: .5em;
-}
+    h3 {
+        color: white;
+        text-align: center;
+        font-size: 2.5em;
+        margin: 0em;
+        padding: .5em;
+    }
 
-ul {
-    background-color: gray;
-    margin-top: 0em;
-    padding-top: .5em;
-    padding-bottom: .5em;
-    position: fixed;
-    top: 0rem;
-    width: 100%;
-}
+    ul {
+        background-color: gray;
+        margin-top: 0em;
+        padding-top: .5em;
+        padding-bottom: .5em;
+        position: fixed;
+        top: 0rem;
+        width: 100%;
+    }
 
-li {
-    display: inline;    
-}
+    li {
+        display: inline;    
+    }
 
-li a {
-    color: white;
-    font-size: 1.3em;
-    padding-top: .5em;
-    padding-left: .75em;
-    padding-bottom: .5em;
-    text-decoration: none;
-}
+    li a {
+        color: white;
+        font-size: 1.3em;
+        padding-top: .5em;
+        padding-left: .75em;
+        padding-bottom: .5em;
+        text-decoration: none;
+    }
 
-p {
-    font-size: 1.2em;
-    margin: 1em;
-}
+    p {
+        font-size: .8em;
+        margin: 1em;
+    }
 
-.contact_button {
-    border: solid .2em;
-    border-color: white;
-    color: white;
-    padding: .5em;
-    text-decoration: none;
-}
+    .contact_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        padding: .5em;
+        text-decoration: none;
+    }
 
-.contact_button_wrapper {
-    text-align: center;
-}
+    .contact_button_wrapper {
+        text-align: center;
+    }
 
-#footer {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
+    #footer {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
 
-#footer_button {
-    border: solid .2em;
-    border-color: white;
-    color: white;
-    padding: .5em;
-    text-decoration: none;
-}
+    #footer_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        padding: .5em;
+        text-decoration: none;
+    }
 
-#footer_button_wrapper {
-    padding: 1em;
-}
+    #footer_button_wrapper {
+        padding: 1em;
+    }
 
-/* ----- Home Section of Page ----- */
-#home_section {
-    background-image: url("media/Color\ \(14\ of\ 20\).jpg");
-    background-color: rgb(175, 175, 175);
-    background-blend-mode: multiply;
-    background-position-x: -130px;
-    background-size: cover;
-    margin-bottom: -1.25rem;
-    padding-bottom: 10em;
-    
-}
+    /* ----- Home Section of Page ----- */
+    #home_section {
+        background-image: url("media/Color\ \(14\ of\ 20\).jpg");
+        background-color: rgb(175, 175, 175);
+        background-blend-mode: multiply;
+        background-position-x: -130px;
+        background-size: cover;
+        margin-bottom: -1.25rem;
+        padding-bottom: 10em;
+        
+    }
 
-/* ----- Bio Section of Page ----- */
-#bio_section {
-    background-image: url("Media/Color\ \(15\ of\ 20\).jpg");
-    background-color: rgb(80, 80, 80);
-    background-blend-mode: overlay;
-    background-size: cover;
-    margin-bottom: -1.25rem;
-    padding-bottom: 5em;
-}
+    /* ----- Bio Section of Page ----- */
+    #bio_section {
+        background-image: url("Media/Color\ \(15\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-size: cover;
+        margin-bottom: -1.25rem;
+        padding-bottom: 5em;
+    }
 
-#bio_pic {
-    display: grid;
-    padding-right: 1em;
-    padding-bottom: .25em;
-    float: left;
-    width: 50%;
-}
+    #bio_pic {
+        display: grid;
+        padding-right: 1em;
+        padding-bottom: .25em;
+        float: left;
+        width: 50%;
+    }
 
-.bio_information {
-    color: white;
-    /* background-color: rgb(49, 49, 49); */
-}
+    .bio_information {
+        color: white;
+        /* background-color: rgb(49, 49, 49); */
+    }
 
-/* ----- Teaching Section of Page ----- */
-#teaching_section {
-    background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
-    background-color: rgb(80, 80, 80);
-    background-blend-mode: overlay;
-    background-size: cover;
-    margin-bottom: -1.25rem;
-    padding-bottom: 20em;
-}
+    /* ----- Teaching Section of Page ----- */
+    #teaching_section {
+        background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position-x: -270px;
+        background-size: 250%;
+        background-repeat: no-repeat;
+        margin-bottom: -1.25rem;
+        padding-bottom: 4em;
+    }
 
-.teaching_information {
-    color: white;
-}
+    .teaching_information {
+        color: white;
+        display: grid;
+        grid-template-columns: 60% auto;
+    }
 
-/* ----- Contact Section of Page ----- */
-#contact_section {
-    background-image: url(media/Color\ \(5\ of\ 20\).jpg);
-    background-size: cover;
-    margin-bottom: -1.25rem;
-    padding-bottom: 20em;
-}
+    /* ----- Contact Section of Page ----- */
+    #contact_section {
+        background-image: url(media/Color\ \(16\ of\ 20\).jpg);
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position-x: -40px;
+        background-size: cover;
+        margin-bottom: -1.25rem;
+        padding-bottom: 4em;
+    }
 
-.contact_information {
-    color: white;
-}
+    .contact_information {
+        color: white;
+    }
 
-/* ----- Footer ----- */
-footer {
-    background-color: black;
-    color: white;
-    margin-bottom: -1.25rem;
-    text-align: center;
+    /* ----- Footer ----- */
+    footer {
+        background-color: black;
+        color: white;
+        margin-bottom: -1.25rem;
+        text-align: center;
+    }
 }
