--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,10 @@
-@media only screen and (max-width: 1000px) {
+/* Universal Styles */
+body {
+    margin: 0rem;
+    padding: 0rem;
+}
+
+@media only screen and (min-width: 801px) {
     body {
         margin: 0rem;
         padding: 0rem;
@@ -22,7 +28,7 @@
     h3 {
         color: white;
         text-align: center;
-        font-size: 2.5em;
+        font-size: 3.5em;
         margin: 0em;
         padding: .5em;
     }
@@ -43,7 +49,7 @@
 
     li a {
         color: white;
-        font-size: 1.3em;
+        font-size: 2em;
         padding-top: .5em;
         padding-left: .75em;
         padding-bottom: .5em;
@@ -51,7 +57,7 @@
     }
 
     p {
-        font-size: 1em;
+        font-size: 1.3em;
         margin: 1em;
     }
 
@@ -61,6 +67,7 @@
         color: white;
         padding: .5em;
         text-decoration: none;
+        font-size: 1.3em;
     }
 
     .contact_button_wrapper {
@@ -91,6 +98,7 @@
         background-blend-mode: multiply;
         background-position-x: -230px;
         background-size: 135%;
+        height: 35rem;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
         padding-bottom: 10em;
@@ -103,6 +111,7 @@
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-size: cover;
+        height: 60rem;
         margin-bottom: -1.25rem;
         padding-bottom: 5em;
     }
@@ -128,6 +137,7 @@
         background-position-x: -100px;
         background-size: 150%;
         background-repeat: no-repeat;
+        height: 45rem;
         margin-bottom: -1.25rem;
         padding-bottom: 4em;
     }
@@ -145,6 +155,7 @@
         background-blend-mode: overlay;
         background-position: bottom;
         background-size: cover;
+        height: 30rem; 
         margin-bottom: -1.25rem;
         padding-bottom: 4em;
     }
@@ -196,22 +207,22 @@
         background-color: gray;
         margin-top: 0em;
         padding-top: .5em;
+        padding-left: 0rem;
         padding-bottom: .5em;
         position: fixed;
         top: 0rem;
         width: 100%;
+        text-align: center;
     }
 
     li {
-        display: inline;    
+        display: inline-block;    
     }
 
     li a {
         color: white;
         font-size: 1.3em;
-        padding-top: .5em;
-        padding-left: .75em;
-        padding-bottom: .5em;
+        padding: .5em;
         text-decoration: none;
     }
 
@@ -367,15 +378,16 @@
         width: 100%;
     }
 
-    li {
-        display: inline;    
+    ul li {
+        display: inline-block;
+        text-align: center;
     }
 
     li a {
         color: white;
         font-size: 1.3em;
         padding-top: .5em;
-        padding-left: .75em;
+        padding-left: 2em;
         padding-bottom: .5em;
         text-decoration: none;
     }
@@ -660,24 +672,24 @@
 
 @media only screen and (max-width: 400px) {
 
-    body {
-        margin: 0rem;
-        padding: 0rem;
-    }
-
     h1 {
         color: white;
-        font-size: 1.75em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.25em;
         text-align: right;
-        padding-top: 2em;
-        margin-right: 1em;
+        padding-top: .9rem;
+        margin-right: 1rem;
     }
 
     h2 {
         color: white;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 1.5em;
         text-align: right;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
         margin-right: 1em;
+        padding: 0rem;
     }
 
     h3 {
@@ -689,10 +701,10 @@
     }
 
     ul {
-        background-color: gray;
+        background-color: rgb(68, 68, 68);
         margin-top: 0em;
-        padding-top: .5em;
-        padding-bottom: .5em;
+        padding-top: .75em;
+        padding-bottom: .75em;
         position: fixed;
         top: 0rem;
         width: 100%;
@@ -704,7 +716,8 @@
 
     li a {
         color: white;
-        font-size: 1.3em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
         padding-top: .5em;
         padding-left: .75em;
         padding-bottom: .5em;
@@ -712,7 +725,8 @@
     }
 
     p {
-        font-size: .8em;
+        font-size: 1em;
+        font-family: Arial, Helvetica, sans-serif;
         margin: 1em;
     }
 
@@ -750,8 +764,8 @@
         background-image: url("media/Color\ \(14\ of\ 20\).jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
-        background-position-x: -130px;
-        background-size: cover;
+        background-position-x: -100px;
+        background-size: 130%;
         margin-bottom: -1.25rem;
         padding-bottom: 10em;
         
@@ -785,8 +799,8 @@
         background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
-        background-position-x: -240px;
-        background-size: 250%;
+        background-position-x: -550px;
+        background-size: 385%;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
         padding-bottom: 4em;
@@ -795,7 +809,7 @@
     .teaching_information {
         color: white;
         display: grid;
-        grid-template-columns: 60% auto;
+        grid-template-columns:60% auto;
     }
 
     /* ----- Contact Section of Page ----- */
