--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,60 +174,66 @@ body {
 
 }
 
-@media only screen and (min-width: 601px) and (max-width: 800px) {
-    body {
-        margin: 0rem;
-        padding: 0rem;
-    }
+@media only screen and (min-width: 701px) and (max-width: 800px) {
 
     h1 {
         color: white;
-        font-size: 2.3em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 3.5em;
         text-align: right;
-        padding-top: 2em;
-        margin-right: 1em;
+        padding-top: 1.1rem;
+        margin-right: 1rem;
     }
 
     h2 {
         color: white;
-        font-size: 1.9em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.25em;
         text-align: right;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
         margin-right: 1em;
+        padding: 0rem;
     }
 
     h3 {
         color: white;
         text-align: center;
-        font-size: 2.5em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.75em;
         margin: 0em;
         padding: .5em;
     }
 
     ul {
-        background-color: gray;
+        background-color: rgb(68, 68, 68);
         margin-top: 0em;
-        padding-top: .5em;
-        padding-left: 0rem;
-        padding-bottom: .5em;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
         position: fixed;
         top: 0rem;
         width: 100%;
-        text-align: center;
     }
 
     li {
-        display: inline-block;    
+        display: inline;    
     }
 
     li a {
         color: white;
-        font-size: 1.3em;
-        padding: .5em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2em;
+        padding-top: .5em;
+        padding-left: .75em;
+        padding-bottom: .5em;
         text-decoration: none;
     }
 
     p {
-        font-size: 1em;
+        font-size: 1.2em;
+        font-family: Arial, Helvetica, sans-serif;
         margin: 1em;
     }
 
@@ -235,6 +241,7 @@ body {
         border: solid .2em;
         border-color: white;
         color: white;
+        font-size: 1.2em;
         padding: .5em;
         text-decoration: none;
     }
@@ -265,11 +272,10 @@ body {
         background-image: url("media/Color\ \(14\ of\ 20\).jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
-        background-position-x: -200px;
-        background-size: 150%;
-        background-repeat: no-repeat;
+        background-position-x: -150px;
+        background-size: 125%;
         margin-bottom: -1.25rem;
-        padding-bottom: 10em;
+        padding-bottom: 18em;
         
     }
 
@@ -301,17 +307,17 @@ body {
         background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
-        background-position-x: -100px;
-        background-size: 150%;
+        background-position-x: -170px;
+        background-size: 180%;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
-        padding-bottom: 4em;
+        padding-bottom: 10em;
     }
 
     .teaching_information {
         color: white;
         display: grid;
-        grid-template-columns: 60% auto;
+        grid-template-columns:50% auto;
     }
 
     /* ----- Contact Section of Page ----- */
@@ -321,8 +327,8 @@ body {
         background-blend-mode: overlay;
         background-position: bottom;
         background-size: cover;
+        padding-bottom: 10rem;
         margin-bottom: -1.25rem;
-        padding-bottom: 4em;
     }
 
     .contact_information {
@@ -339,61 +345,237 @@ body {
 
 }
 
-@media only screen and (min-width: 501px) and (max-width: 600px) {
-    body {
-        margin: 0rem;
-        padding: 0rem;
-    }
+@media only screen and (min-width: 601px) and (max-width: 700px) {
 
     h1 {
         color: white;
-        font-size: 2.3em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 3.2em;
         text-align: right;
-        padding-top: 2em;
-        margin-right: 1em;
+        padding-top: 1.1rem;
+        margin-right: 1rem;
     }
 
     h2 {
         color: white;
-        font-size: 1.9em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2em;
         text-align: right;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
         margin-right: 1em;
+        padding: 0rem;
     }
 
     h3 {
         color: white;
         text-align: center;
-        font-size: 2.5em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.75em;
         margin: 0em;
         padding: .5em;
     }
 
     ul {
-        background-color: gray;
+        background-color: rgb(68, 68, 68);
         margin-top: 0em;
-        padding-top: .5em;
-        padding-bottom: .5em;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
         position: fixed;
         top: 0rem;
         width: 100%;
     }
 
-    ul li {
-        display: inline-block;
-        text-align: center;
+    li {
+        display: inline;    
     }
 
     li a {
         color: white;
-        font-size: 1.3em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.4em;
         padding-top: .5em;
-        padding-left: 2em;
+        padding-left: .75em;
+        padding-bottom: .5em;
+        text-decoration: none;
+    }
+
+    p {
+        font-size: 1.2em;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 1em;
+    }
+
+    .contact_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        font-size: 1.2em;
+        padding: .5em;
+        text-decoration: none;
+    }
+
+    .contact_button_wrapper {
+        text-align: center;
+    }
+
+    #footer {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    #footer_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        padding: .5em;
+        text-decoration: none;
+    }
+
+    #footer_button_wrapper {
+        padding: 1em;
+    }
+
+    /* ----- Home Section of Page ----- */
+    #home_section {
+        background-image: url("media/Color\ \(14\ of\ 20\).jpg");
+        background-color: rgb(175, 175, 175);
+        background-blend-mode: multiply;
+        background-position-x: -150px;
+        background-size: 125%;
+        margin-bottom: -1.25rem;
+        padding-bottom: 18em;
+        
+    }
+
+    /* ----- Bio Section of Page ----- */
+    #bio_section {
+        background-image: url("Media/Color\ \(15\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-size: cover;
+        margin-bottom: -1.25rem;
+        padding-bottom: 5em;
+    }
+
+    #bio_pic {
+        display: grid;
+        padding-right: 1em;
+        padding-bottom: .25em;
+        float: left;
+        width: 40%;
+    }
+
+    .bio_information {
+        color: white;
+        /* background-color: rgb(49, 49, 49); */
+    }
+
+    /* ----- Teaching Section of Page ----- */
+    #teaching_section {
+        background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position-x: -320px;
+        background-size: 220%;
+        background-repeat: no-repeat;
+        margin-bottom: -1.25rem;
+        padding-bottom: 10em;
+    }
+
+    .teaching_information {
+        color: white;
+        display: grid;
+        grid-template-columns:50% auto;
+    }
+
+    /* ----- Contact Section of Page ----- */
+    #contact_section {
+        background-image: url(media/Color\ \(16\ of\ 20\).jpg);
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position: bottom;
+        background-size: cover;
+        padding-bottom: 10rem;
+        margin-bottom: -1.25rem;
+    }
+
+    .contact_information {
+        color: white;
+    }
+
+    /* ----- Footer ----- */
+    footer {
+        background-color: black;
+        color: white;
+        margin-bottom: -1.25rem;
+        text-align: center;
+    }
+
+}
+
+@media only screen and (min-width: 500px) and (max-width: 600px) {
+
+    h1 {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.7em;
+        text-align: right;
+        padding-top: 1.1rem;
+        margin-right: 1rem;
+    }
+
+    h2 {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.8em;
+        text-align: right;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
+        margin-right: 1em;
+        padding: 0rem;
+    }
+
+    h3 {
+        color: white;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.75em;
+        margin: 0em;
+        padding: .5em;
+    }
+
+    ul {
+        background-color: rgb(68, 68, 68);
+        margin-top: 0em;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
+        position: fixed;
+        top: 0rem;
+        width: 100%;
+    }
+
+    li {
+        display: inline;    
+    }
+
+    li a {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.4em;
+        padding-top: .5em;
+        padding-left: .75em;
         padding-bottom: .5em;
         text-decoration: none;
     }
 
     p {
         font-size: 1em;
+        font-family: Arial, Helvetica, sans-serif;
         margin: 1em;
     }
 
@@ -431,11 +613,10 @@ body {
         background-image: url("media/Color\ \(14\ of\ 20\).jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
-        background-position-x: -160px;
-        background-size: 150%;
-        background-repeat: no-repeat;
+        background-position-x: -150px;
+        background-size: 145%;
         margin-bottom: -1.25rem;
-        padding-bottom: 10em;
+        padding-bottom: 18em;
         
     }
 
@@ -454,7 +635,7 @@ body {
         padding-right: 1em;
         padding-bottom: .25em;
         float: left;
-        width: 40%;
+        width: 50%;
     }
 
     .bio_information {
@@ -467,17 +648,17 @@ body {
         background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
-        background-position-x: -230px;
-        background-size: 215%;
+        background-position-x: -370px;
+        background-size: 250%;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
-        padding-bottom: 4em;
+        padding-bottom: 10em;
     }
 
     .teaching_information {
         color: white;
         display: grid;
-        grid-template-columns: 60% auto;
+        grid-template-columns:50% auto;
     }
 
     /* ----- Contact Section of Page ----- */
@@ -487,8 +668,8 @@ body {
         background-blend-mode: overlay;
         background-position: bottom;
         background-size: cover;
+        padding-bottom: 7rem;
         margin-bottom: -1.25rem;
-        padding-bottom: 4em;
     }
 
     .contact_information {
@@ -505,7 +686,7 @@ body {
 
 }
 
-@media only screen and (min-width: 401px) and (max-width: 500px) {
+@media only screen and (min-width: 451px) and (max-width: 500px) {
 
     h1 {
         color: white;
@@ -541,6 +722,8 @@ body {
         margin-top: 0em;
         padding-top: .75em;
         padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
         position: fixed;
         top: 0rem;
         width: 100%;
@@ -635,8 +818,8 @@ body {
         background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
-        background-position-x: -510px;
-        background-size: 350%;
+        background-position-x: -400px;
+        background-size: 275%;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
         padding-bottom: 10em;
@@ -645,7 +828,7 @@ body {
     .teaching_information {
         color: white;
         display: grid;
-        grid-template-columns:60% auto;
+        grid-template-columns:50% auto;
     }
 
     /* ----- Contact Section of Page ----- */
@@ -653,7 +836,7 @@ body {
         background-image: url(media/Color\ \(16\ of\ 20\).jpg);
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
-        background-position: -100px bottom;
+        background-position: bottom;
         background-size: cover;
         padding-bottom: 7rem;
         margin-bottom: -1.25rem;
@@ -673,21 +856,21 @@ body {
 
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (min-width: 401px) and (max-width: 450px) {
 
     h1 {
         color: white;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 2.25em;
+        font-size: 2.4em;
         text-align: right;
-        padding-top: .9rem;
+        padding-top: 1.1rem;
         margin-right: 1rem;
     }
 
     h2 {
         color: white;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 1.5em;
+        font-size: 1.6em;
         text-align: right;
         margin-top: 0rem;
         margin-bottom: 0rem;
@@ -699,7 +882,7 @@ body {
         color: white;
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 2.5em;
+        font-size: 2.75em;
         margin: 0em;
         padding: .5em;
     }
@@ -709,6 +892,8 @@ body {
         margin-top: 0em;
         padding-top: .75em;
         padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
         position: fixed;
         top: 0rem;
         width: 100%;
@@ -721,7 +906,7 @@ body {
     li a {
         color: white;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 1.1em;
+        font-size: 1.15em;
         padding-top: .5em;
         padding-left: .75em;
         padding-bottom: .5em;
@@ -768,10 +953,180 @@ body {
         background-image: url("media/Color\ \(14\ of\ 20\).jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
-        background-position-x: -100px;
-        background-size: 130%;
+        background-position-x: -120px;
+        background-size: 145%;
+        margin-bottom: -1.25rem;
+        padding-bottom: 14em;
+        
+    }
+
+    /* ----- Bio Section of Page ----- */
+    #bio_section {
+        background-image: url("Media/Color\ \(15\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-size: cover;
+        margin-bottom: -1.25rem;
+        padding-bottom: 5em;
+    }
+
+    #bio_pic {
+        display: grid;
+        padding-right: 1em;
+        padding-bottom: .25em;
+        float: left;
+        width: 50%;
+    }
+
+    .bio_information {
+        color: white;
+        /* background-color: rgb(49, 49, 49); */
+    }
+
+    /* ----- Teaching Section of Page ----- */
+    #teaching_section {
+        background-image: url("Media/Color\ \(18\ of\ 20\).jpg");
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position-x: -550px;
+        background-size: 350%;
+        background-repeat: no-repeat;
         margin-bottom: -1.25rem;
         padding-bottom: 10em;
+    }
+
+    .teaching_information {
+        color: white;
+        display: grid;
+        grid-template-columns:50% auto;
+    }
+
+    /* ----- Contact Section of Page ----- */
+    #contact_section {
+        background-image: url(media/Color\ \(16\ of\ 20\).jpg);
+        background-color: rgb(80, 80, 80);
+        background-blend-mode: overlay;
+        background-position: -100px bottom;
+        background-size: cover;
+        padding-bottom: 7rem;
+        margin-bottom: -1.25rem;
+    }
+
+    .contact_information {
+        color: white;
+    }
+
+    /* ----- Footer ----- */
+    footer {
+        background-color: black;
+        color: white;
+        margin-bottom: -1.25rem;
+        text-align: center;
+    }
+
+}
+
+@media only screen and (max-width: 400px) {
+
+    h1 {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2em;
+        text-align: right;
+        padding-top: 1.25rem;
+        margin-right: 1rem;
+    }
+
+    h2 {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.25em;
+        text-align: right;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
+        margin-right: 1em;
+        padding: 0rem;
+    }
+
+    h3 {
+        color: white;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.5em;
+        margin: 0em;
+        padding: .5em;
+    }
+
+    ul {
+        background-color: rgb(68, 68, 68);
+        margin-top: 0em;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        padding-left: 0em;
+        text-align: center;
+        position: fixed;
+        top: 0rem;
+        width: 100%;
+    }
+
+    li {
+        display: inline;    
+    }
+
+    li a {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1em;
+        padding-top: .5em;
+        padding-left: .75em;
+        padding-bottom: .5em;
+        text-decoration: none;
+    }
+
+    p {
+        font-size: 1em;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 1em;
+    }
+
+    .contact_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        padding: .5em;
+        text-decoration: none;
+    }
+
+    .contact_button_wrapper {
+        text-align: center;
+    }
+
+    #footer {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    #footer_button {
+        border: solid .2em;
+        border-color: white;
+        color: white;
+        padding: .5em;
+        text-decoration: none;
+    }
+
+    #footer_button_wrapper {
+        padding: 1em;
+    }
+
+    /* ----- Home Section of Page ----- */
+    #home_section {
+        background-image: url("media/Color\ \(14\ of\ 20\).jpg");
+        background-color: rgb(179, 179, 179);
+        background-blend-mode: multiply;
+        background-position-x: -90px;
+        background-size: 130%;
+        margin-bottom: -1.25rem;
+        padding-bottom: 9em;
         
     }
 
@@ -807,6 +1162,7 @@ body {
         background-size: 325%;
         background-repeat: no-repeat;
         margin-bottom: -1.25rem;
+        padding-bottom: 2em;
     }
 
     .teaching_information {
